@@ -4,7 +4,8 @@ Changelog
 4.0.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Spaces and styles for bando state label in bandi-search
+  [nzambello]
 
 
 4.0.6 (2020-02-14)
